# crewai-demos

ttr01/: README.md  post.txt  pyproject.toml
ttr01/src/ttr01/: crew.py  main.py
ttr01/src/ttr01/config/: agents.yaml  tasks.yaml
ttr02/: .gitignore  README.md  pyproject.toml  wikipost.txt
ttr02/src/ttr02/: crew.py  main.py
ttr02/src/ttr02/config/: agents.yaml  tasks.yaml
ttr03_flow/: .gitignore  README.md  poem.txt  pyproject.toml
ttr03_flow/src/ttr03_flow/: main.py
ttr03_flow/src/ttr03_flow/crews/poem_crew/: poem_crew.py
ttr03_flow/src/ttr03_flow/crews/poem_crew/config/: agents.yaml  tasks.yaml
ttr04_tools/: README.md  pyproject.toml
ttr04_tools/src/ttr04_tools/: crew.py  main.py
ttr05_golden_price/: README.md  gold_prices_report.md  pyproject.toml  report.md
ttr05_golden_price/src/ttr05_golden_price/: crew.py  main.py
ttr05_golden_price/src/ttr05_golden_price/config/: agents.yaml  tasks.yaml
ttr05_metal_prices/: README.md  pyproject.toml
ttr05_metal_prices/src/ttr05_metal_prices/: crew.py  main.py
ttr05_metal_prices/src/ttr05_metal_prices/config/: agents.yaml  tasks.yaml
ttr05_metal_prices/src/ttr05_metal_prices/tools/: __init__.py  file_write_tool.py
