[project]
name = "ttr01"
version = "0.1.0"
description = "ttr01 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0"
]

[project.scripts]
ttr01 = "ttr01.main:run"
run_crew = "ttr01.main:run"
train = "ttr01.main:train"
replay = "ttr01.main:replay"
test = "ttr01.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
