[project]
name = "ttr05_metal_prices"
version = "0.1.0"
description = "ttr05_metal_prices using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai>=0.40.0,<0.41.0",
    "crewai-tools>=0.3.0,<0.4.0", # Add crewai-tools
]

[project.scripts]
ttr05_metal_prices = "ttr05_metal_prices.main:run"
run_crew = "ttr05_metal_prices.main:run"
train = "ttr05_metal_prices.main:train"
replay = "ttr05_metal_prices.main:replay"
test = "ttr05_metal_prices.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
